feat: gulp config init

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+# Default config
 .DS_Store
 node_modules/
 /dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Personal config
+sftp.config.js
 
 # Editor directories and files
 .idea
