--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src --fix",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "gulp deploy"
   },
   "dependencies": {
     "ant-design-vue": "^1.4.10",
@@ -45,6 +46,8 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "gulp": "^4.0.2",
+    "gulp-sftp": "^0.1.5",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
