--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.4.10",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -47,7 +49,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^4.0.2",
-    "gulp-sftp": "^0.1.5",
+    "gulp-sftp-up4": "^0.1.8",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
