--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gulp deploy"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "ant-design-vue": "^1.4.10",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
